fix the images alignment issue

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1703,6 +1703,8 @@
   height: 100%;
   -webkit-transition: all 0.5s ease;
   transition: all 0.5s ease;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .team-main-area .team-members-container .team-members-grid .team-item-area .team-item-ovelay {
@@ -2319,11 +2321,14 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  background-color: #0d07fa;
 }
 
 .about-page-main-container-area .skills-main-area .image-wrapper img {
   width: 100%;
   height: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 
 @media (max-width: 950px) {
@@ -2541,11 +2546,19 @@
       -ms-flex: 1;
           flex: 1;
   height: 680px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
 }
 
 .about-page-main-container-area .about-page-about-us-area .image-wrapper-about img {
   width: 100%;
   height: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 
 @media (max-width: 768px) {
