--- a/src/assets/scss/_about-page.scss
+++ b/src/assets/scss/_about-page.scss
@@ -1,6 +1,6 @@
-@import "./colors";
-@import "./mixins/display";
-@import "./variables";
+@import './colors';
+@import './mixins/display';
+@import './variables';
 
 .about-page-main-container-area {
   width: 100%;
@@ -14,7 +14,7 @@
     @include display(column);
     justify-content: center;
     position: relative;
-    background-image: url("../img/14.jpg");
+    background-image: url('../img/14.jpg');
     background-position: center;
     background-size: cover;
 
@@ -69,9 +69,11 @@
       height: 680px;
       @include display(column);
       justify-content: center;
+      background-color: #0d07fa;
       img {
         width: 100%;
         height: 100%;
+        object-fit: contain;
       }
       @include mediaqueries(950px) {
         height: 600px;
@@ -209,9 +211,12 @@
     .image-wrapper-about {
       flex: 1;
       height: 680px;
+      display: flex;
+      justify-content: flex-end;
       img {
         width: 100%;
         height: 100%;
+        object-fit: contain;
       }
     }
 
